Fix typo for featured dates. Lighten colours for burn/feature period

--- a/Rodgort/ClientApp/src/app/requests/requests.component.html
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.html
@@ -170,8 +170,8 @@
                             <div class="col-md-6" *ngIf="tag.questionCountOverTime.length">
                                 <app-question-count-graph 
                                     [data]="tag.questionCountOverTime"
-                                    [featuredStarted]="question.featureStarted"
-                                    [featuredEnded]="question.featureEnded"
+                                    [featuredStarted]="question.featuredStarted"
+                                    [featuredEnded]="question.featuredEnded"
                                     [burnStarted]="question.burnStarted"
                                     [burnEnded]="question.burnEnded"
                                     >
