Add link to progress from main page

--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -38,6 +38,7 @@
     <hr />
     <h2>Administration</h2>
     <ul>
+        <li><a routerLink="/progress">Current burns</a></li>
         <li><a routerLink="/logs">Logs</a></li>
         <li><a href="/Hangfire">Hangfire</a></li>
     </ul>
