--- a/Rodgort/ClientApp/src/app/requests/requests.component.html
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.html
@@ -142,7 +142,7 @@
                                     </div>
                                 </div>
 
-                                <div *ngIf="isAdmin">
+                                <div *ngIf="isTrogdorRoomOwner">
                                     <div class="row mt-2">
                                         <div class="col-md-6">
                                             Admin
