Comment resolver script, and add link to it if user doesn't have it installed

--- a/Rodgort/ClientApp/src/app/unknown-deletion-resolution/unknown-deletion-resolution.component.html
+++ b/Rodgort/ClientApp/src/app/unknown-deletion-resolution/unknown-deletion-resolution.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!getRevision">
-  Please install the userscript
+  Please install the userscript <a href="https://gitlab.com/rjrudman/Rodgort/raw/master/unknown-deletion-resolver.user.js">here</a>.
 </div>
 
 <div *ngIf="getRevision">
