Add admin link to deletion resolution

--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -43,6 +43,7 @@
         <ul>
             <li><a routerLink="/logs">Logs</a></li>
             <li><a href="/Hangfire">Hangfire</a></li>
+            <li><a href="/unknown-deletion-resolution">Unknown deletion resolution</a></li>
         </ul>
     </ng-container>
 </div>
