Send the token for unknown deletions

--- a/Rodgort/ClientApp/src/app/unknown-deletion-resolution/unknown-deletion-resolution.component.html
+++ b/Rodgort/ClientApp/src/app/unknown-deletion-resolution/unknown-deletion-resolution.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div *ngIf="getRevision">
-  Userscript detected!
+  <a href="javascript:void" (click)="StartProcessing()">Start Processing (This will make a request every 5 seconds using your account)</a>
   <table *ngIf="postsToVisit" class="table">
     <thead>
       <tr>
