Don't make the grid wiggle

--- a/Rodgort/ClientApp/src/app/unknown-deletion-resolution/unknown-deletion-resolution.component.html
+++ b/Rodgort/ClientApp/src/app/unknown-deletion-resolution/unknown-deletion-resolution.component.html
@@ -8,8 +8,8 @@
   <table *ngIf="postsToVisit" class="table">
     <thead>
       <tr>
-        <th>Post Id</th>
-        <th>Status</th>
+        <th style="width: 50%;">Post Id</th>
+        <th style="width: 50%;">Status</th>
       </tr>
     </thead>
     <tbody>
