Include closures/deletions/retags/roombas in tag progress

--- a/Rodgort/ClientApp/src/app/progress/progress.component.html
+++ b/Rodgort/ClientApp/src/app/progress/progress.component.html
@@ -9,7 +9,14 @@
         </div>
 
       <h2>Tag Progress</h2>
-      <app-question-count-graph [data]="tag.questionCountOverTime" [featuredStarted]="burn.featuredStarted"
+      <app-question-count-graph 
+        [data]="tag.questionCountOverTime" 
+        [closuresOverTime]="tag.closuresOverTime" 
+        [deletionsOverTime]="tag.deletionsOverTime" 
+        [retagsOverTime]="tag.retagsOverTime" 
+        [roombasOverTime]="tag.roombasOverTime" 
+        
+        [featuredStarted]="burn.featuredStarted"
         [featuredEnded]="burn.featuredEnded" [burnStarted]="burn.burnStarted" [burnEnded]="burn.burnEnded">
 
       </app-question-count-graph>
