--- a/Rodgort/ClientApp/src/app/app.component.html
+++ b/Rodgort/ClientApp/src/app/app.component.html
@@ -15,7 +15,7 @@
                         Filters
                     </a>
                     <div class="dropdown-menu" aria-labelledby="adminDropdownLink">
-                        <a class="dropdown-item" routerLink="/requests" [queryParams]="{approvalStatus:1}">Needs Approval</a>
+                        <a class="dropdown-item" routerLink="/requests" [queryParams]="{trackingStatusId:1}">Needs Tracking confirmation</a>
                     </div>
                 </li>
           </ul>
