--- a/Rodgort/ClientApp/src/app/requests/requests.component.html
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.html
@@ -7,14 +7,14 @@
         <div class="col">
             <div class="input-group">
                 <div class="input-group-prepend">
-                    <label class="input-group-text" for="approvalStatusSelector">Approval Status</label>
+                    <label class="input-group-text" for="trackingStatusSelector">Tracking Status</label>
                 </div>
-                <select class="custom-select" id="approvalStatusSelector" [(ngModel)]="filter.approvalStatus"
+                <select class="custom-select" id="trackingStatusSelector" [(ngModel)]="filter.trackingStatusId"
                     [ngModelOptions]="{standalone: true}">
                     <option value="-1">Any</option>
-                    <option value="2">Approved</option>
-                    <option value="3">Rejected</option>
-                    <option value="1">Pending</option>
+                    <option value="2">Tracked</option>
+                    <option value="3">Ignored</option>
+                    <option value="1">Requires Tracking Approval</option>
                 </select>
             </div>
         </div>
@@ -36,7 +36,7 @@
                 <div class="input-group-prepend">
                     <label class="input-group-text" for="statusSelector">Status</label>
                 </div>
-                <select class="custom-select" id="statusSelector" [(ngModel)]="filter.status" [ngModelOptions]="{standalone: true}">
+                <select class="custom-select" id="statusSelector" [(ngModel)]="filter.trackingStatusName" [ngModelOptions]="{standalone: true}">
                     <option value="">Any</option>
                     <option value="none">None</option>
                     <option value="status-completed">Completed</option>
@@ -68,8 +68,8 @@
         <div class="col">
             <button type="submit" class="btn btn-primary" (click)="applyFilter()">Search</button>
             <div class="pull-right">
-                <input type="checkbox" id="chkShowRejectedTags" [(ngModel)]="showRejectedTags" [ngModelOptions]="{standalone: true}" />
-                <label for="chkShowRejectedTags">Show rejected tags</label>
+                <input type="checkbox" id="chkShowIgnoredTags" [(ngModel)]="showIgnoredTags" [ngModelOptions]="{standalone: true}" />
+                <label for="chkShowIgnoredTags">Show ignored tags</label>
             </div>
         </div>
     </div>
@@ -106,7 +106,7 @@
             </div>
             <div class="tags">
                 <ng-container *ngFor="let tag of question.mainTags | sort:'statusId'">
-                    <div *ngIf="showRejectedTags || tag.status !== 'Rejected'" class="mt-3 p-2" [class.tag-rejected]="tag.status === 'Rejected'">
+                    <div *ngIf="showIgnoredTags || tag.trackingStatusName !== 'Ignored'" class="mt-3 p-2" [class.tag-ignored]="tag.trackingStatusName === 'Ignored'">
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="row pb-3">
@@ -132,12 +132,11 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6">
-                                        Approval Status <img width="15px" height="15px" src="../../assets/questionmark.jpeg"
-                                            title="Approved: The tag is relevant to the request. Rejected: The tag is not relevant to the request.">
+                                        Status
                                     </div>
                                     <div class="col-md-6">
-                                        <div [class.tag-approved]="tag.status==='Approved'" [class.tag-pending]="tag.status==='Pending'">
-                                            {{tag.status}}
+                                        <div [class.tag-tracked]="tag.trackingStatusName==='Tracked'" [class.tag-pending]="tag.trackingStatusName==='Requires Tracking Approval'">
+                                            {{tag.trackingStatusName}}
                                         </div>
                                     </div>
                                 </div>
@@ -148,22 +147,10 @@
                                             Admin
                                         </div>
                                         <div class="col-md-6">
-                                            <a *ngIf="tag.type !== 'Burninate'" href="javascript:void" (click)="setRequestType(question.id, tag, 'Burninate')">Burninate</a>
-                                            <span *ngIf="tag.type !== 'Burninate'">|</span>
-                                            <a *ngIf="tag.type !== 'Synonym'" href="javascript:void" (click)="setRequestType(question.id, tag, 'Synonym')">Synonym</a>
-                                            <span *ngIf="tag.type !== 'Synonym' && tag.type !== 'Merge'">|</span>
-                                            <a *ngIf="tag.type !== 'Merge'" href="javascript:void" (click)="setRequestType(question.id, tag, 'Merge')">Merge</a>
-                                        </div>
-                                    </div>
-
-                                    <div class="row mt-2">
-                                        <div class="col-md-6">
-                                        </div>
-                                        <div class="col-md-6">
-                                            <a *ngIf="tag.status !== 'Approved'" href="javascript:void" (click)="setApprovalStatus(question.id, tag, true)">Approve
+                                            <a *ngIf="tag.trackingStatusName !== 'Tracked'" href="javascript:void(0)" (click)="setTagTrackingStatus(question.id, tag, true)">Track
                                                 Tag</a>
-                                            <span *ngIf="tag.status !== 'Approved' && tag.status !== 'Rejected'">|</span>
-                                            <a *ngIf="tag.status !== 'Rejected'" href="javascript:void" (click)="setApprovalStatus(question.id, tag, false)">Reject
+                                            <span *ngIf="tag.trackingStatusName !== 'Tracked' && tag.trackingStatusName !== 'Ignored'">|</span>
+                                            <a *ngIf="tag.trackingStatusName !== 'Ignored'" href="javascript:void(0)" (click)="setTagTrackingStatus(question.id, tag, false)">Ignore
                                                 Tag</a>
                                         </div>
                                     </div>
