--- a/Rodgort/ClientApp/src/app/requests/requests.component.scss
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.scss
@@ -1,4 +1,4 @@
-.post-tag, .post-metatag, .post-statustag, .tag-approved, .tag-pending {
+.post-tag, .post-metatag, .post-statustag, .tag-tracked, .tag-pending {
     display: inline;
 
     padding: .4em .5em;
@@ -58,11 +58,11 @@
     padding: 7px 6px;
 }
 
-.tag-rejected {
+.tag-ignored {
     background-color: #f1c0c0;
 }
 
-.tag-approved {
+.tag-tracked {
     border:none;
     background-color: #a8f1a8;
 }
