Let users search specifically for 'tracked elsewhere'

--- a/Rodgort/ClientApp/src/app/requests/requests.component.html
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.html
@@ -15,6 +15,7 @@
                     <option value="2">Tracked</option>
                     <option value="3">Ignored</option>
                     <option value="1">Requires tracking approval</option>
+                    <option value="4">Tracked elsewhere</option>
                 </select>
             </div>
         </div>
