--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -46,6 +46,7 @@
         <ul>
             <li><a routerLink="/logs">Logs</a></li>
             <li><a href="/Hangfire">Hangfire</a></li>
+            <li><a href="/manual-question-processing">Manual Question Processing</a></li>
             <li><a href="/unknown-deletion-resolution">Unknown deletion resolution
                     ({{statistics.admin.unknownDeletions}})</a></li>
         </ul>
