Gah, fix splitting code

--- a/Rodgort/ClientApp/src/app/manual-question-processing/manual-question-processing.component.html
+++ b/Rodgort/ClientApp/src/app/manual-question-processing/manual-question-processing.component.html
@@ -5,7 +5,7 @@
   <input id="followingInput" class="form-control" placeholder="Room Id" [(ngModel)]="request.roomId">
 </div>
 <div class="form-group">
-  <textarea class="form-control" [(ngModel)]="request.questionIds" placeholder="Enter question ids (separated by ,)">
+  <textarea class="form-control" [(ngModel)]="request.questionIds" placeholder="Enter question ids (separated by ;)">
     </textarea>
 </div>
 
