--- a/Rodgort/ClientApp/src/app/unknown-deletion-resolution/unknown-deletion-resolution.component.html
+++ b/Rodgort/ClientApp/src/app/unknown-deletion-resolution/unknown-deletion-resolution.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!getRevision">
-  Please install the userscript <a href="https://gitlab.com/rjrudman/Rodgort/raw/master/unknown-deletion-resolver.user.js">here</a>.
+  Please install the userscript <a href="../../assets/unknown-deletion-resolver.user.js">here</a>.
   <b>Warning, this userscript gives rodgort access to access https://stackoverflow.com/posts/id/revisions VIA YOUR STACK OVERFLOW ACCOUNT.</b>
 </div>
 
