Link to users, add user grand totals

--- a/Rodgort/ClientApp/src/app/progress/progress.component.html
+++ b/Rodgort/ClientApp/src/app/progress/progress.component.html
@@ -35,8 +35,25 @@
         </thead>
         <tbody>
           <tr *ngFor="let row of tag.userTotals | sortAscending: 'total'">
-            <td>{{row.user}}</td>
+            <td><a href="https://stackoverflow.com/users/{{row.userId}}">{{row.userName}}</a></td>
             <td>{{row.type}}</td>
+            <td>{{row.total}}</td>
+          </tr>
+        </tbody>
+      </table>
+
+      
+      <h2>User grand totals</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>User</th>
+            <th>Count</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let row of tag.userGrandTotals | sortAscending: 'total'">
+            <td><a href="https://stackoverflow.com/users/{{row.userId}}">{{row.userName}}</a></td>
             <td>{{row.total}}</td>
           </tr>
         </tbody>
