--- a/Rodgort/ClientApp/src/app/requests/requests.component.html
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.html
@@ -90,6 +90,7 @@
                 <p *ngFor="let metaTag of question.metaRequestTags" class="post-metatag"><a href="https://meta.stackoverflow.com/questions/tagged/{{metaTag.tagName}}">{{metaTag.tagName}}</a></p>
             </h3>
             <a href="https://meta.stackoverflow.com/questions/{{question.id}}">View on site</a>
+            <a href="/progress?metaQuestionId={{question.id}}">Progress</a>
             <div class="row">
                 <div class="col-md-3">
                     Request score:
