--- a/Rodgort/ClientApp/src/app/requests/requests.component.html
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.html
@@ -89,7 +89,7 @@
                 <p *ngFor="let metaTag of question.metaStatusTags" class="post-statustag"><a href="https://meta.stackoverflow.com/questions/tagged/{{metaTag.tagName}}">{{metaTag.tagName}}</a></p>
                 <p *ngFor="let metaTag of question.metaRequestTags" class="post-metatag"><a href="https://meta.stackoverflow.com/questions/tagged/{{metaTag.tagName}}">{{metaTag.tagName}}</a></p>
             </h3>
-            <a href="https://meta.stackoverflow.com/questions/{{question.id}}">View on site</a>
+            <a href="https://meta.stackoverflow.com/questions/{{question.id}}">View on site</a> |
             <a href="/progress?metaQuestionId={{question.id}}">Progress</a>
             <div class="row">
                 <div class="col-md-3">
