--- a/Rodgort/ClientApp/src/app/app.component.html
+++ b/Rodgort/ClientApp/src/app/app.component.html
@@ -10,14 +10,14 @@
               <!-- <li class="nav-item">
                   <a class="nav-link" routerLink="/reports">Reports</a>
               </li> -->
-              <li class="nav-item dropdown hidden-md-down">
+              <!-- <li class="nav-item dropdown hidden-md-down">
                     <a class="nav-link dropdown-toggle" href="#" id="adminDropdownLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Filters
                     </a>
                     <div class="dropdown-menu" aria-labelledby="adminDropdownLink">
                         <a class="dropdown-item" routerLink="/requests" [queryParams]="{trackingStatusId:1}">Needs Tracking confirmation</a>
                     </div>
-                </li>
+                </li> -->
           </ul>
 
           <div class="quota-display">Quota Remaining: {{quotaRemaining}}</div>
