--- a/Rodgort/ClientApp/src/app/progress/progress.component.html
+++ b/Rodgort/ClientApp/src/app/progress/progress.component.html
@@ -6,76 +6,77 @@
     <h1>{{burn.metaQuestionTitle}}</h1>
     <ng-container *ngFor="let tag of burn.tags">
       <div class="container mt-3 mb-3">
-          <p class="post-tag"><a href="https://stackoverflow.com/questions/tagged/{{tag.tag}}">{{tag.tag}}</a></p>
-          <p style="display: inline"> - {{tag.numberOfQuestions}} questions</p>
-          <p style="display: inline"> - <a href="{{burn.metaQuestionLink}}">View meta post</a></p>
-        </div>
+        <p class="post-tag"><a href="https://stackoverflow.com/questions/tagged/{{tag.tag}}">{{tag.tag}}</a></p>
+        <p style="display: inline"> - {{tag.numberOfQuestions}} questions</p>
+        <p style="display: inline"> - <a href="{{burn.metaQuestionLink}}">View meta post</a></p>
+      </div>
 
       <h2>Tag Progress</h2>
-      <app-question-count-graph 
-        [data]="tag.questionCountOverTime" 
-        [closuresOverTime]="tag.closuresOverTime" 
-        [deletionsOverTime]="tag.deletionsOverTime" 
-        [retagsOverTime]="tag.retagsOverTime" 
-        [roombasOverTime]="tag.roombasOverTime" 
-        
-        [featuredStarted]="burn.featuredStarted"
-        [featuredEnded]="burn.featuredEnded" [burnStarted]="burn.burnStarted" [burnEnded]="burn.burnEnded">
+      <app-question-count-graph [data]="tag.questionCountOverTime" [closuresOverTime]="tag.closuresOverTime"
+        [deletionsOverTime]="tag.deletionsOverTime" [retagsOverTime]="tag.retagsOverTime" [roombasOverTime]="tag.roombasOverTime"
+        [featuredStarted]="burn.featuredStarted" [featuredEnded]="burn.featuredEnded" [burnStarted]="burn.burnStarted"
+        [burnEnded]="burn.burnEnded">
 
       </app-question-count-graph>
 
       <h2>User Activity</h2>
       <div *ngIf="chart" [chart]="chart"></div>
-     
-      <h2>User grand totals</h2>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>User</th>
-            <th>Count</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let row of tag.userGrandTotals | sortAscending: 'total'">
-            <td><a href="https://stackoverflow.com/users/{{row.userId}}">{{row.userName}}</a></td>
-            <td>{{row.total}}</td>
-          </tr>
-        </tbody>
-      </table>
 
-      <h2>User total breakdown</h2>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>User</th>
-            <th>Type</th>
-            <th>Count</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let row of tag.userTotals | sortAscending: 'total'">
-            <td><a href="https://stackoverflow.com/users/{{row.userId}}">{{row.userName}}</a></td>
-            <td>{{row.type}}</td>
-            <td>{{row.total}}</td>
-          </tr>
-        </tbody>
-      </table>
+      <ng-container *ngIf="tag.userGrandTotals.length">
+        <h2>User grand totals</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>User</th>
+              <th>Count</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let row of tag.userGrandTotals | sortAscending: 'total'">
+              <td><a href="https://stackoverflow.com/users/{{row.userId}}">{{row.userName}}</a></td>
+              <td>{{row.total}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </ng-container>
 
-      <h2>Grand totals</h2>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Type</th>
-            <th>Count</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let row of tag.totals | sortAscending: 'total'">
-            <td>{{row.type}}</td>
-            <td>{{row.total}}</td>
-          </tr>
-        </tbody>
-      </table>
+      <ng-container *ngIf="tag.userTotals.length">
+        <h2>User total breakdown</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>User</th>
+              <th>Type</th>
+              <th>Count</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let row of tag.userTotals | sortAscending: 'total'">
+              <td><a href="https://stackoverflow.com/users/{{row.userId}}">{{row.userName}}</a></td>
+              <td>{{row.type}}</td>
+              <td>{{row.total}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </ng-container>
+
+      <ng-container *ngIf="tag.totals.length">
+        <h2>Grand totals</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Type</th>
+              <th>Count</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let row of tag.totals | sortAscending: 'total'">
+              <td>{{row.type}}</td>
+              <td>{{row.total}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </ng-container>
     </ng-container>
   </ng-container>
 </ng-container>
