--- a/Rodgort/ClientApp/src/app/progress/progress.component.html
+++ b/Rodgort/ClientApp/src/app/progress/progress.component.html
@@ -29,6 +29,9 @@
 
         <ng-container *ngIf="tag.userGrandTotals.length">
           <h2>User grand totals</h2>
+          
+          <input type="checkbox" id="userGrandTotalShowAll" [(ngModel)]="userGrandTotalShowAll" [ngModelOptions]="{standalone: true}" >
+          <label for="userGrandTotalShowAll">Show all</label>
           <table class="table">
             <thead>
               <tr>
@@ -37,9 +40,11 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let row of tag.userGrandTotals | sortAscending: 'total'">
-                <td><a href="https://stackoverflow.com/users/{{row.userId}}">{{row.userName}}</a></td>
-                <td>{{row.total}}</td>
+              <tr *ngFor="let row of tag.userGrandTotals | sortAscending: 'total'; let i=index">
+                <ng-container *ngIf="userGrandTotalShowAll || i < 10">
+                  <td><a href="https://stackoverflow.com/users/{{row.userId}}">{{row.userName}}</a></td>
+                  <td>{{row.total}}</td>
+                </ng-container>
               </tr>
             </tbody>
           </table>
@@ -47,6 +52,9 @@
 
         <ng-container *ngIf="tag.userTotals.length">
           <h2>User total breakdown</h2>
+
+          <input type="checkbox" id="userBreakdownShowAll" [(ngModel)]="userBreakdownShowAll" [ngModelOptions]="{standalone: true}" >
+          <label for="userBreakdownShowAll">Show all</label>
           <table class="table">
             <thead>
               <tr>
@@ -56,10 +64,12 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let row of tag.userTotals | sortAscending: 'total'">
-                <td><a href="https://stackoverflow.com/users/{{row.userId}}">{{row.userName}}</a></td>
-                <td>{{row.type}}</td>
-                <td>{{row.total}}</td>
+              <tr *ngFor="let row of tag.userTotals | sortAscending: 'total'; let i=index">
+                <ng-container *ngIf="userBreakdownShowAll || i < 10">
+                  <td><a href="https://stackoverflow.com/users/{{row.userId}}">{{row.userName}}</a></td>
+                  <td>{{row.type}}</td>
+                  <td>{{row.total}}</td>
+                </ng-container>
               </tr>
             </tbody>
           </table>
