Give columns a fixed size so they don't jiggle when toggling top 10

--- a/Rodgort/ClientApp/src/app/progress/progress.component.html
+++ b/Rodgort/ClientApp/src/app/progress/progress.component.html
@@ -35,8 +35,8 @@
           <table class="table">
             <thead>
               <tr>
-                <th>User</th>
-                <th>Count</th>
+                <th style="width:85%">User</th>
+                <th style="width:15%">Count</th>
               </tr>
             </thead>
             <tbody>
@@ -58,9 +58,9 @@
           <table class="table">
             <thead>
               <tr>
-                <th>User</th>
-                <th>Type</th>
-                <th>Count</th>
+                <th style="width: 70%">User</th>
+                <th style="width: 15%">Type</th>
+                <th style="width: 15%">Count</th>
               </tr>
             </thead>
             <tbody>
