--- a/Rodgort/ClientApp/src/app/progress/progress.component.html
+++ b/Rodgort/ClientApp/src/app/progress/progress.component.html
@@ -80,8 +80,8 @@
           <table class="table">
             <thead>
               <tr>
-                <th>Type</th>
-                <th>Count</th>
+                <th style="width: 85%">Type</th>
+                <th style="width: 15%">Count</th>
               </tr>
             </thead>
             <tbody>
