--- a/Rodgort/ClientApp/src/styles.scss
+++ b/Rodgort/ClientApp/src/styles.scss
@@ -6,3 +6,12 @@ body {
 .loading-container {
     text-align: center;
 }
+
+.spinner {
+    -webkit-animation:spin 1s linear infinite;
+    -moz-animation:spin 1s linear infinite;
+    animation:spin 1s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
