Better filtering of logs

--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -44,7 +44,7 @@
     <ng-container *ngIf="isAdmin">
         <h2>Administration</h2>
         <ul>
-            <li><a routerLink="/logs">Logs</a></li>
+            <li><a routerLink="/logs" [queryParams]="{level:'Info'}">Logs</a></li>
             <li><a href="/Hangfire">Hangfire</a></li>
             <li><a href="/manual-question-processing">Manual Question Processing</a></li>
             <li><a href="/unknown-deletion-resolution">Unknown deletion resolution
